--- a/css/roudmap.css
+++ b/css/roudmap.css
@@ -1,89 +1,4 @@
-/* .new-roud-title {
-  display: flex;
-  width: 100%;
-  font-weight: 700;
-  margin-top: 0.5rem;
-  justify-content: center;
-  position: relative;
-}
-
-.manual-content {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  position: relative;
-}
-.roudnode-title {
-  margin: 0 0 0.5rem 1.5rem;
-} */
-/* .roudnode-title::placeholder {
-  color: var(--color-text-secondary);
-  font-size: 12px;
-  font-family: 'Oxanium', sans-serif;
-  display: flex;
-  margin: 1rem 0 0 1rem;
-  transition: all 0.8s ease;
-}
-.roudnode-title:focus::placeholder {
-  transform: translateX(5rem);
-  opacity: 0;
-} */
-/* .modal-subtask,
-.modal-subtask-text {
-  display: flex;
-  flex-wrap: wrap;
-  font-size: 10px;
-}
-.modal-subtask {
-  margin-bottom: 0.5rem;
-}
-.modal-custom-check {
-  height: 0.8rem;
-  width: 0.8rem;
-  border: 1px solid var(--glass-border);
-  border-radius: 2px;
-  position: relative;
-  display: inline-block;
-  margin-right: 0.5rem;
-  margin-left: 1.5rem;
-}
-
-.roud-disabld-checkbox:checked + .modal-custom-check::after {
-  content: '';
-  position: absolute;
-  left: 2px;
-  top: 0px;
-  width: 5px;
-  height: 12px;
-  border: solid var(--color-done);
-  transform: rotate(45deg);
-  border-width: 0 2px 2px 0;
-} */
-/* .roud-disabld-checkbox:checked ~ .modal-subtask-text {
-  color: var(--color-done);
-  text-decoration: underline;
-  opacity: 0.5;
-} */
-/* .sub-element-container {
-  display: flex;
-  position: relative;
-} */
-.modal-sub-task-list {
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-  font-size: 10px;
-  margin: 1rem 0 0 1.5rem;
-  max-height: 5rem;
-
-  gap: 0.5rem;
-}
-.modal-sub-task-list li {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-.import-content {
+/* .import-content {
   position: absolute;
   display: flex;
   width: 100%;
@@ -120,8 +35,8 @@
   width: 100%;
   height: 50%;
   margin-bottom: 1rem;
-}
-.import-discription {
+} */
+/* .import-discription {
   width: 90%;
   height: 70%;
   position: relative;
@@ -145,16 +60,16 @@
 .import-discription:focus::placeholder {
   transform: translateX(5rem);
   opacity: 0;
-}
-.helper-footer {
+} */
+/* .helper-footer {
   margin-top: 1rem;
   display: flex;
   width: 100%;
   color: var(--pause-btn-main);
   font-size: 10px;
   justify-content: center;
-}
-.roud-input-container {
+} */
+/* .roud-input-container {
   position: relative;
   display: flex;
 }
@@ -165,7 +80,7 @@
 .sub-element-container p {
   top: -0.1rem;
   left: 7rem;
-}
+} */
 .roadmap-select-bar {
   display: flex;
   margin-top: 0.5rem;
